whitespace below header is fixed

--- a/src/components/Footer/index.module.css
+++ b/src/components/Footer/index.module.css
@@ -77,6 +77,11 @@
   flex-direction: row;
   align-items: center;
   margin-top: 3rem;
+  cursor: pointer;
+}
+
+.contactItem:hover {
+  opacity: 0.6;
 }
 .contactItem img {
   width: 4rem;
